# src/server/api/music.ts
@@ -1,44 +1,39 @@
-import express  from 'express';
-import db       from '#server/db/music';
+import { type Router, Router as router } from 'express';
+import { type Logger } from 'winston';
 
-export const music = express.Router();
+import { getArtists, getGenres, getNewAlbums, getTracks } from '#server/db/music.js';
 
-music.get(
-    '/tracks',
-    (_req, res) => {
-        void (async () => {
-            const tracks = await db.getTracks();
-            res.status(200).json(tracks);
-        })();
-    }
-)
-.get(
-    '/newAlbums',
-    (_req, res) => {
-        void (async () => {
-            const albums = await db.getNewAlbums();
-            res.status(200).json(albums);
-        })();
-    }
-)
-.get(
-    '/artists',
-    (_req, res) => {
-        void (async () => {
-            const artists = await db.getArtists();
-            res.status(200).json(artists);
-        })();
-    }
-)
-.get(
-    '/genres',
-    (_req, res) => {
-        void (async () => {
-            const artists = await db.getGenres();
-            res.status(200).json(artists);
-        })();
-    }
-);
+export function music(_logger: Logger): Router {
+  return router()
+    .get('/tracks', (_req, res) => {
+      void (async () => {
+        const tracks = await getTracks();
+        res.status(200).json(tracks);
+      })();
+    })
+    .get('/new-albums', (_req, res) => {
+      void (async () => {
+        const albums = await getNewAlbums();
+        res.status(200).json(albums);
+      })();
+    })
+    .get('/artists', (_req, res) => {
+      void (async () => {
+        const artists = await getArtists();
+        res.status(200).json(artists);
+      })();
+    })
+    .get('/genres', (_req, res) => {
+      void (async () => {
+        const artists = await getGenres();
+        res.status(200).json(artists);
+      })();
+    });
+}
 
-export type { GetTracks, GetNewAlbums, GetArtists, GetGenres } from '#server/db/music';
-export default music;
+export {
+  type GetArtists,
+  type GetGenres,
+  type GetNewAlbums,
+  type GetTracks,
+} from '#server/db/music.js';
