# src/server/static-content.ts
@@ -9,6 +9,8 @@ import { paths } from '#config/paths';
 import { browserSettings } from '#settings/browser';
 import { userInterfaceSettings } from '#settings/user-interface';
 
+import { cacheControl } from './cache-control.ts';
+
 const isDevelopment = process.env.NODE_ENV !== 'production';
 
 function status404(_req: Request, res: Response): void {
@@ -17,16 +19,6 @@ function status404(_req: Request, res: Response): void {
     favicon: browserSettings.favicon,
     homePage: userInterfaceSettings.homePage,
   });
-}
-
-function cacheControl(days = 0): string {
-  const seconds = days * 24 * 60 * 60;
-
-  if (seconds === 0 || isDevelopment) {
-    return 'public, no-cache, no-store, must-revalidate';
-  }
-
-  return `public, max-age=${seconds}`;
 }
 
 export function staticContent(app: Application, logger: Logger): void {
